[package]
name = "axum-handler-extract"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "axum handler extract"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/axum-ext"
homepage = "https://github.com/bk-rs/axum-ext"
documentation = "https://docs.rs/axum-handler-extract"
keywords = []
categories = []
readme = "README.md"

[dependencies]
axum = { version = "0.6", default-features = false, features = ["matched-path"] }
serde = { version = "1", default-features = false }

[dev-dependencies]
axum = { version = "0.6", default-features = false, features = ["http1", "tokio"] }
hyper = { version = "0.14", default-features = false }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

async-trait = { version = "0.1", default-features = false }
portpicker = { version = "0.1", default-features = false }
isahc = { version = "1", default-features = false }
